js/js.translator/testData/incremental/invalidation/mainModuleInvalidation/main/m.kt
fun box(): String {
    if (qux() != 42) return "Fail"
    return "OK"
}
